--- a/style.css
+++ b/style.css
@@ -23,3 +23,12 @@ font-style: normal;
 font-weight: 400;
 line-height: 26px;
 }
+btn{
+    color: #FFF;
+text-align: right;
+font-family: Work Sans;
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+}
