--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 
 .strt{
-    width: 1600px;
-    height: 800px;
-    padding-right: -200px;
-    background-image: url(images/banner/banner2.png)
+    width: 900px;
+    height: 400px;
+    
+    background-image: url("images/banner/banner2.png");
+    background-size: cover;
 }
 .st{
     color: var(--dark-01, #151414);
@@ -31,4 +32,15 @@ font-size: 20px;
 font-style: normal;
 font-weight: 600;
 line-height: normal;
+}
+.person{
+    width: 50px;
+    display: flex;
+}
+.pic{
+    background: rgba(241,91,34,0.30);
+    border-radius: 727px
+}
+.web{
+    margin-left: 180px;
 }
